--- a/index.html
+++ b/index.html
@@ -39,10 +39,19 @@ A:HOVER {
 
 <body>
   <center>
+   <h1> Lua iconv </h1>
    <a href="http://www.luaforge.net/projects/lua-iconv/"><img src="lua-iconv-logo.png" width="128" height="128" alt="Lua-iconv logo" title="Lua-iconv logo" border="0"></a>
-   <p>Please refer to the <a href="http://www.luaforge.net/projects/lua-iconv/">Lua-iconv project page</a> for more information.</p>
+   <p style="width:50%">
+    Lua-iconv is a Lua binding to the POSIX 
+    <a href="http://www.opengroup.org/onlinepubs/007908799/xsh/iconv.h.html">iconv</a>
+    library. The iconv library converts a sequence of characters from one
+    codeset into a sequence of corresponding characters in another codeset.
+   </p>
+   <p> Please refer to the
+     <a href="http://www.luaforge.net/projects/lua-iconv/">Lua-iconv project page</a>
+     for file downloads and more information.
+   </p>
   </center>
  </body>
 </html>
-
 
